Fix fork ribbon letter spacing

--- a/demos/main.css
+++ b/demos/main.css
@@ -23,7 +23,7 @@ header .description {
 }
 
 .github-fork-ribbon {
-    letter-spacing: 0.5;
+    letter-spacing: 0.1em;
 }
 
 article {
